Minor Change: Formatted the JVSTM/OJB Backend Code to comply with the latest code formatting convetions.